src/aplicacion/ventanas/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    THEN
    WHEN

Grammar

Rule 0     S' -> initial
Rule 1     initial -> produccion initial
Rule 2     initial -> produccion
Rule 3     seleccionardb -> USAR ID
Rule 4     produccion -> create PCOMA
Rule 5     produccion -> createdb PCOMA
Rule 6     produccion -> compartidas PCOMA
Rule 7     produccion -> seleccionardb PCOMA
Rule 8     produccion -> funcion
Rule 9     produccion -> procedure PCOMA
Rule 10    produccion -> llamado PCOMA
Rule 11    compartidas -> insert
Rule 12    compartidas -> select
Rule 13    compartidas -> update
Rule 14    compartidas -> truncate
Rule 15    compartidas -> drop
Rule 16    compartidas -> alter
Rule 17    compartidas -> delete
Rule 18    createdb -> CREATE DATA BASE ID
Rule 19    create -> CREATE TABLE ID LPAREN defcreate_list RPAREN
Rule 20    defcreate_list -> defcreate_list COMA defcreate
Rule 21    defcreate_list -> defcreate
Rule 22    defcreate -> campo COMA defcreate
Rule 23    defcreate -> campo
Rule 24    campo -> ID tipodato restriccion
Rule 25    campo -> ID tipodato
Rule 26    restriccion -> NOT NULL
Rule 27    restriccion -> PRIMARY KEY foranea
Rule 28    restriccion -> PRIMARY KEY
Rule 29    restriccion -> foranea
Rule 30    foranea -> REFERENCES ID LPAREN ID RPAREN
Rule 31    tipodato -> INT
Rule 32    tipodato -> DECIMAL
Rule 33    tipodato -> BOOL
Rule 34    tipodato -> NVARCHAR LPAREN NUMBER RPAREN
Rule 35    tipodato -> NCHAR LPAREN NUMBER RPAREN
Rule 36    tipodato -> DATE
Rule 37    tipodato -> DATETIME
Rule 38    select -> SELECT funcionesdefinidas
Rule 39    select -> SELECT selectmultiple
Rule 40    selectmultiple -> listacolumn FROM valores WHERE condiciones
Rule 41    selectmultiple -> listacolumn FROM valores
Rule 42    listacolumn -> valorescolumna COMA listacolumn
Rule 43    listacolumn -> valorescolumna
Rule 44    listacolumn -> TIMES
Rule 45    valorescolumna -> ID PUNTO ID
Rule 46    valorescolumna -> ID
Rule 47    valorescolumna -> funcionesdefinidas
Rule 48    valorescolumna -> llamado
Rule 49    funcionesdefinidas -> CONCATENA LPAREN factor COMA factor RPAREN
Rule 50    funcionesdefinidas -> SUBSTRAER LPAREN CADENA COMA NUMBER COMA NUMBER
Rule 51    funcionesdefinidas -> HOY LPAREN RPAREN
Rule 52    funcionesdefinidas -> CONTAR LPAREN TIMES RPAREN FROM ID
Rule 53    funcionesdefinidas -> SUMA LPAREN ID RPAREN FROM ID
Rule 54    funcionesdefinidas -> CAST
Rule 55    alter -> ALTER TABLE ID ADD COLUMN ID tipodato
Rule 56    alter -> ALTER TABLE ID DROP COLUMN ID
Rule 57    truncate -> TRUNCATE TABLE ID
Rule 58    drop -> DROP TABLE ID
Rule 59    drop -> DROP COLUMN ID
Rule 60    insert -> INSERT INTO ID parametrosi VALUES entradas
Rule 61    parametrosi -> LPAREN valores RPAREN
Rule 62    entradas -> LPAREN valentradas RPAREN
Rule 63    valentradas -> expression COMA valentradas
Rule 64    valentradas -> expression
Rule 65    valores -> ID COMA valores
Rule 66    valores -> ID
Rule 67    update -> UPDATE ID SET cambios WHERE ID EQUALS expression
Rule 68    update -> UPDATE ID SET cambios WHERE condiciones
Rule 69    cambios -> campocambios COMA cambios
Rule 70    cambios -> campocambios
Rule 71    campocambios -> ID EQUALS expression
Rule 72    delete -> DELETE FROM ID WHERE ID EQUALS expression
Rule 73    variable -> DECLARE ARROBA ID tipodato
Rule 74    variable -> SET ARROBA ID EQUALS valorvar
Rule 75    valorvar -> expression
Rule 76    valorvar -> funcionesdefinidas
Rule 77    initial2 -> opespeciales initial2
Rule 78    initial2 -> opespeciales
Rule 79    opespeciales -> if PCOMA
Rule 80    opespeciales -> variable PCOMA
Rule 81    opespeciales -> compartidas PCOMA
Rule 82    funcion -> CREATE FUNCTION ID LPAREN parametros RPAREN RETURN tipodato AS BEGIN initial2 RETURN expression PCOMA END
Rule 83    parametros -> ARROBA ID tipodato COMA parametros
Rule 84    parametros -> ARROBA ID tipodato
Rule 85    procedure -> CREATE PROCEDURE ID LPAREN parametros RPAREN AS BEGIN initial2 END
Rule 86    llamado -> EXEC ID entradas
Rule 87    llamado -> ID entradas
Rule 88    llamado -> ID LPAREN RPAREN
Rule 89    if -> IF LPAREN condiciones RPAREN BEGIN initial2 END
Rule 90    if -> IF LPAREN condiciones RPAREN BEGIN initial2 END ELSE BEGIN initial2 END
Rule 91    condiciones -> condicion
Rule 92    condiciones -> condicion explogicas condiciones
Rule 93    condicion -> expression toperador expression
Rule 94    toperador -> EQUALS
Rule 95    toperador -> DIFERENTE
Rule 96    toperador -> MAYORQ
Rule 97    toperador -> MENORQ
Rule 98    toperador -> MAYORIQ
Rule 99    toperador -> MENORIQ
Rule 100   explogicas -> AND
Rule 101   explogicas -> OR
Rule 102   explogicas -> NOT1
Rule 103   case -> expression toperador
Rule 104   expression -> expression PLUS term
Rule 105   expression -> expression MINUS term
Rule 106   expression -> term
Rule 107   term -> term TIMES factor2
Rule 108   term -> term DIVIDE factor2
Rule 109   term -> factor2
Rule 110   factor2 -> LPAREN expression RPAREN
Rule 111   factor2 -> factor
Rule 112   factor -> NUMBER
Rule 113   factor -> DECIMAL1
Rule 114   factor -> CADENA
Rule 115   factor -> ARROBA ID
Rule 116   factor -> ID PUNTO ID
Rule 117   factor -> ID

Terminals, with rules where they appear

ADD                  : 55
ALTER                : 55 56
AND                  : 100
ARROBA               : 73 74 83 84 115
AS                   : 82 85
BASE                 : 18
BEGIN                : 82 85 89 90 90
BOOL                 : 33
CADENA               : 50 114
CASE                 : 
CAST                 : 54
COLUMN               : 55 56 59
COMA                 : 20 22 42 49 50 50 63 65 69 83
CONCATENA            : 49
CONTAR               : 52
CREATE               : 18 19 82 85
DATA                 : 18
DATE                 : 36
DATETIME             : 37
DECIMAL              : 32
DECIMAL1             : 113
DECLARE              : 73
DELETE               : 72
DIFERENTE            : 95
DIVIDE               : 108
DROP                 : 56 58 59
ELSE                 : 90
END                  : 82 85 89 90 90
EQUALS               : 67 71 72 74 94
EXEC                 : 86
FROM                 : 40 41 52 53 72
FUNCTION             : 82
HOY                  : 51
ID                   : 3 18 19 24 25 30 30 45 45 46 52 53 53 55 55 56 56 57 58 59 60 65 66 67 67 68 71 72 72 73 74 82 83 84 85 86 87 88 115 116 116 117
IF                   : 89 90
INSERT               : 60
INT                  : 31
INTO                 : 60
KEY                  : 27 28
LPAREN               : 19 30 34 35 49 50 51 52 53 61 62 82 85 88 89 90 110
MAYORIQ              : 98
MAYORQ               : 96
MENORIQ              : 99
MENORQ               : 97
MINUS                : 105
NCHAR                : 35
NOT                  : 26
NOT1                 : 102
NULL                 : 26
NUMBER               : 34 35 50 50 112
NVARCHAR             : 34
OR                   : 101
PCOMA                : 4 5 6 7 9 10 79 80 81 82
PLUS                 : 104
PRIMARY              : 27 28
PROCEDURE            : 85
PUNTO                : 45 116
REFERENCES           : 30
RETURN               : 82 82
RPAREN               : 19 30 34 35 49 51 52 53 61 62 82 85 88 89 90 110
SELECT               : 38 39
SET                  : 67 68 74
SUBSTRAER            : 50
SUMA                 : 53
TABLE                : 19 55 56 57 58
THEN                 : 
TIMES                : 44 52 107
TRUNCATE             : 57
UPDATE               : 67 68
USAR                 : 3
VALUES               : 60
WHEN                 : 
WHERE                : 40 67 68 72
error                : 

Nonterminals, with rules where they appear

alter                : 16
cambios              : 67 68 69
campo                : 22 23
campocambios         : 69 70
case                 : 
compartidas          : 6 81
condicion            : 91 92
condiciones          : 40 68 89 90 92
create               : 4
createdb             : 5
defcreate            : 20 21 22
defcreate_list       : 19 20
delete               : 17
drop                 : 15
entradas             : 60 86 87
explogicas           : 92
expression           : 63 64 67 71 72 75 82 93 93 103 104 105 110
factor               : 49 49 111
factor2              : 107 108 109
foranea              : 27 29
funcion              : 8
funcionesdefinidas   : 38 47 76
if                   : 79
initial              : 1 0
initial2             : 77 82 85 89 90 90
insert               : 11
listacolumn          : 40 41 42
llamado              : 10 48
opespeciales         : 77 78
parametros           : 82 83 85
parametrosi          : 60
procedure            : 9
produccion           : 1 2
restriccion          : 24
seleccionardb        : 7
select               : 12
selectmultiple       : 39
term                 : 104 105 106 107 108
tipodato             : 24 25 55 73 82 83 84
toperador            : 93 103
truncate             : 14
update               : 13
valentradas          : 62 63
valores              : 40 41 61 65
valorescolumna       : 42 43
valorvar             : 74
variable             : 80

Parsing method: LALR

state 0

    (0) S' -> . initial
    (1) initial -> . produccion initial
    (2) initial -> . produccion
    (4) produccion -> . create PCOMA
    (5) produccion -> . createdb PCOMA
    (6) produccion -> . compartidas PCOMA
    (7) produccion -> . seleccionardb PCOMA
    (8) produccion -> . funcion
    (9) produccion -> . procedure PCOMA
    (10) produccion -> . llamado PCOMA
    (19) create -> . CREATE TABLE ID LPAREN defcreate_list RPAREN
    (18) createdb -> . CREATE DATA BASE ID
    (11) compartidas -> . insert
    (12) compartidas -> . select
    (13) compartidas -> . update
    (14) compartidas -> . truncate
    (15) compartidas -> . drop
    (16) compartidas -> . alter
    (17) compartidas -> . delete
    (3) seleccionardb -> . USAR ID
    (82) funcion -> . CREATE FUNCTION ID LPAREN parametros RPAREN RETURN tipodato AS BEGIN initial2 RETURN expression PCOMA END
    (85) procedure -> . CREATE PROCEDURE ID LPAREN parametros RPAREN AS BEGIN initial2 END
    (86) llamado -> . EXEC ID entradas
    (87) llamado -> . ID entradas
    (88) llamado -> . ID LPAREN RPAREN
    (60) insert -> . INSERT INTO ID parametrosi VALUES entradas
    (38) select -> . SELECT funcionesdefinidas
    (39) select -> . SELECT selectmultiple
    (67) update -> . UPDATE ID SET cambios WHERE ID EQUALS expression
    (68) update -> . UPDATE ID SET cambios WHERE condiciones
    (57) truncate -> . TRUNCATE TABLE ID
    (58) drop -> . DROP TABLE ID
    (59) drop -> . DROP COLUMN ID
    (55) alter -> . ALTER TABLE ID ADD COLUMN ID tipodato
    (56) alter -> . ALTER TABLE ID DROP COLUMN ID
    (72) delete -> . DELETE FROM ID WHERE ID EQUALS expression

    CREATE          shift and go to state 10
    USAR            shift and go to state 19
    EXEC            shift and go to state 20
    ID              shift and go to state 11
    INSERT          shift and go to state 21
    SELECT          shift and go to state 22
    UPDATE          shift and go to state 23
    TRUNCATE        shift and go to state 24
    DROP            shift and go to state 25
    ALTER           shift and go to state 26
    DELETE          shift and go to state 27

    initial                        shift and go to state 1
    produccion                     shift and go to state 2
    create                         shift and go to state 3
    createdb                       shift and go to state 4
    compartidas                    shift and go to state 5
    seleccionardb                  shift and go to state 6
    funcion                        shift and go to state 7
    procedure                      shift and go to state 8
    llamado                        shift and go to state 9
    insert                         shift and go to state 12
    select                         shift and go to state 13
    update                         shift and go to state 14
    truncate                       shift and go to state 15
    drop                           shift and go to state 16
    alter                          shift and go to state 17
    delete                         shift and go to state 18

state 1

    (0) S' -> initial .



state 2

    (1) initial -> produccion . initial
    (2) initial -> produccion .
    (1) initial -> . produccion initial
    (2) initial -> . produccion
    (4) produccion -> . create PCOMA
    (5) produccion -> . createdb PCOMA
    (6) produccion -> . compartidas PCOMA
    (7) produccion -> . seleccionardb PCOMA
    (8) produccion -> . funcion
    (9) produccion -> . procedure PCOMA
    (10) produccion -> . llamado PCOMA
    (19) create -> . CREATE TABLE ID LPAREN defcreate_list RPAREN
    (18) createdb -> . CREATE DATA BASE ID
    (11) compartidas -> . insert
    (12) compartidas -> . select
    (13) compartidas -> . update
    (14) compartidas -> . truncate
    (15) compartidas -> . drop
    (16) compartidas -> . alter
    (17) compartidas -> . delete
    (3) seleccionardb -> . USAR ID
    (82) funcion -> . CREATE FUNCTION ID LPAREN parametros RPAREN RETURN tipodato AS BEGIN initial2 RETURN expression PCOMA END
    (85) procedure -> . CREATE PROCEDURE ID LPAREN parametros RPAREN AS BEGIN initial2 END
    (86) llamado -> . EXEC ID entradas
    (87) llamado -> . ID entradas
    (88) llamado -> . ID LPAREN RPAREN
    (60) insert -> . INSERT INTO ID parametrosi VALUES entradas
    (38) select -> . SELECT funcionesdefinidas
    (39) select -> . SELECT selectmultiple
    (67) update -> . UPDATE ID SET cambios WHERE ID EQUALS expression
    (68) update -> . UPDATE ID SET cambios WHERE condiciones
    (57) truncate -> . TRUNCATE TABLE ID
    (58) drop -> . DROP TABLE ID
    (59) drop -> . DROP COLUMN ID
    (55) alter -> . ALTER TABLE ID ADD COLUMN ID tipodato
    (56) alter -> . ALTER TABLE ID DROP COLUMN ID
    (72) delete -> . DELETE FROM ID WHERE ID EQUALS expression

    $end            reduce using rule 2 (initial -> produccion .)
    CREATE          shift and go to state 10
    USAR            shift and go to state 19
    EXEC            shift and go to state 20
    ID              shift and go to state 11
    INSERT          shift and go to state 21
    SELECT          shift and go to state 22
    UPDATE          shift and go to state 23
    TRUNCATE        shift and go to state 24
    DROP            shift and go to state 25
    ALTER           shift and go to state 26
    DELETE          shift and go to state 27

    produccion                     shift and go to state 2
    initial                        shift and go to state 28
    create                         shift and go to state 3
    createdb                       shift and go to state 4
    compartidas                    shift and go to state 5
    seleccionardb                  shift and go to state 6
    funcion                        shift and go to state 7
    procedure                      shift and go to state 8
    llamado                        shift and go to state 9
    insert                         shift and go to state 12
    select                         shift and go to state 13
    update                         shift and go to state 14
    truncate                       shift and go to state 15
    drop                           shift and go to state 16
    alter                          shift and go to state 17
    delete                         shift and go to state 18

state 3

    (4) produccion -> create . PCOMA

    PCOMA           shift and go to state 29


state 4

    (5) produccion -> createdb . PCOMA

    PCOMA           shift and go to state 30


state 5

    (6) produccion -> compartidas . PCOMA

    PCOMA           shift and go to state 31


state 6

    (7) produccion -> seleccionardb . PCOMA

    PCOMA           shift and go to state 32


state 7

    (8) produccion -> funcion .

    CREATE          reduce using rule 8 (produccion -> funcion .)
    USAR            reduce using rule 8 (produccion -> funcion .)
    EXEC            reduce using rule 8 (produccion -> funcion .)
    ID              reduce using rule 8 (produccion -> funcion .)
    INSERT          reduce using rule 8 (produccion -> funcion .)
    SELECT          reduce using rule 8 (produccion -> funcion .)
    UPDATE          reduce using rule 8 (produccion -> funcion .)
    TRUNCATE        reduce using rule 8 (produccion -> funcion .)
    DROP            reduce using rule 8 (produccion -> funcion .)
    ALTER           reduce using rule 8 (produccion -> funcion .)
    DELETE          reduce using rule 8 (produccion -> funcion .)
    $end            reduce using rule 8 (produccion -> funcion .)


state 8

    (9) produccion -> procedure . PCOMA

    PCOMA           shift and go to state 33


state 9

    (10) produccion -> llamado . PCOMA

    PCOMA           shift and go to state 34


state 10

    (19) create -> CREATE . TABLE ID LPAREN defcreate_list RPAREN
    (18) createdb -> CREATE . DATA BASE ID
    (82) funcion -> CREATE . FUNCTION ID LPAREN parametros RPAREN RETURN tipodato AS BEGIN initial2 RETURN expression PCOMA END
    (85) procedure -> CREATE . PROCEDURE ID LPAREN parametros RPAREN AS BEGIN initial2 END

    TABLE           shift and go to state 35
    DATA            shift and go to state 36
    FUNCTION        shift and go to state 37
    PROCEDURE       shift and go to state 38


state 11

    (87) llamado -> ID . entradas
    (88) llamado -> ID . LPAREN RPAREN
    (62) entradas -> . LPAREN valentradas RPAREN

    LPAREN          shift and go to state 40

    entradas                       shift and go to state 39

state 12

    (11) compartidas -> insert .

    PCOMA           reduce using rule 11 (compartidas -> insert .)


state 13

    (12) compartidas -> select .

    PCOMA           reduce using rule 12 (compartidas -> select .)


state 14

    (13) compartidas -> update .

    PCOMA           reduce using rule 13 (compartidas -> update .)


state 15

    (14) compartidas -> truncate .

    PCOMA           reduce using rule 14 (compartidas -> truncate .)


state 16

    (15) compartidas -> drop .

    PCOMA           reduce using rule 15 (compartidas -> drop .)


state 17

    (16) compartidas -> alter .

    PCOMA           reduce using rule 16 (compartidas -> alter .)


state 18

    (17) compartidas -> delete .

    PCOMA           reduce using rule 17 (compartidas -> delete .)


state 19

    (3) seleccionardb -> USAR . ID

    ID              shift and go to state 41


state 20

    (86) llamado -> EXEC . ID entradas

    ID              shift and go to state 42


state 21

    (60) insert -> INSERT . INTO ID parametrosi VALUES entradas

    INTO            shift and go to state 43


state 22
